--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
+    "react-router-dom": "^6.4.5",
+    "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.1",
     "react-typical": "^0.1.3",
     "typed.js": "^2.0.12",
